--- a/Web Dev/index.html
+++ b/Web Dev/index.html
@@ -46,6 +46,8 @@
     <summary></summary>
     <article></article>
     <caption></caption>
+    <section></section>
+    <main></main>
 
 
     <!-- Formatting Elements -->
